Copy other static assets like css, img folders placed outside the _posts and _layouts directories.

--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
         "marked": "0.2.6",
         "commander": "1.1.1",
         "mkdirp": "0.3.4",
-        "moment": "1.7.2"
+        "moment": "1.7.2",
+        "ncp": "0.2.6"
     },
     "devDependencies": {
         "mocha": "*"
